--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script nonce="{{ nonce }}">window.userInformation = {{ userInformation }};</script>
+    <script nonce="{{ nonce }}">window.userInformation = {{ userInformation | json }};</script>
     <noscript>
         <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
                 Please enable it to continue.</strong>
